# Iphone-Backup-Extractor

./: .gitignore  README.md  __init__.py  cli.py  config.example.json  config.py  config.smoke.json  deduplicator.py  extractor.py  inspector.py  logger.py  main.py  pyproject.toml  repairer.py  requirements.txt
ibackupx/: __init__.py  cli.py  config.py  constants.py  deduplicator.py  extractor.py  inspector.py  logger.py  repairer.py  utils.py
scripts/: create_smoke_backup.py
smoke_backup/abcd/: Manifest.db  Manifest.plist
tests/: conftest.py  test_config.py  test_deduplicator.py  test_extractor.py  test_inspector.py  test_repairer.py  test_utils.py
tests/fixtures/: demo_config.json
