[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibackupx"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
	"iphone-backup-decrypt>=0.9.0",
	"Pillow>=10.1.0",
	"pillow-heif>=0.13.0",
	"piexif>=1.1.3",
	"rich>=13.7.0",
	"pydantic>=2.5.0",
	"python-dateutil>=2.8.2",
	"click>=8.1.7",
	"colorama>=0.4.6",
	"imagehash>=4.3.1",
	"send2trash>=1.8.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-tmp-path>=0.1.0",
]

[project.scripts]
ibackupx = "ibackupx.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ibackupx*"]
